--- a/requirements.txt
+++ b/requirements.txt
@@ -15,5 +15,5 @@ python-dotenv==0.10.3
 requests==2.22.0
 six==1.12.0
 soupsieve==1.9.2
-steamdb-parser-mrmarble
+git+git://github.com/MrMarble/steambd-calculator-parser
 urllib3==1.25.3
